--- a/indexnew.html
+++ b/indexnew.html
@@ -10,7 +10,7 @@
             body{min-height:100vh;
             margin:0px;}
             .container{width: 100%; background: #202020; border: solid 2px #f0f0f0;
-            text-align: center;}
+            text-align: center}
             h1{margin: 0; text-shadow: none;}
             p{max-width: max-content;}
         </style></head>
@@ -23,8 +23,8 @@
             <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too!
                 Making this website has been really fun, and i hope you like having a gander at it.
                 This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess. Make yourself at home!
-                Also: they/them, pt-br, en, tok, <18yo</p>
-                <p><b>discord</b>: @cvni81#4837 - <b>email</b>: cvni81@gmail.com</p>
+                <br>Also: they/them, pt-br, en, tok, <18yo
+                <br><br><b>discord</b>: @cvni81#4837 - <b>email</b>: cvni81@gmail.com</p>
         </div></div>
 
         <div></div>
