--- a/indexnew.html
+++ b/indexnew.html
@@ -1,32 +1,56 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;800&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,300;0,700;1,700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>cvni81</title>
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
             .all{display: grid;
-            grid-template-columns: 20% 60% 20%; width: 100%; gap: 30px; padding: 20px}
+            grid-template-columns: 350px 1px auto 350px}
             body{min-height:100vh;
             margin:0px;}
-            .container{width: 100%; background: #202020; border: solid 2px #f0f0f0;
-            text-align: center}
-            h1{margin: 0; text-shadow: none;}
-            p{max-width: max-content;}
+            .misc{color: #f0f0f0;
+            font-family: 'Space Grotesk', sans-serif;}
+            a.misc, a.i, a.log{font-style: italic;}
+            a.misc:hover{color: #15c405;
+            text-decoration-color: #15c405;}
+            a.log:hover{color: #ffa900;
+            text-decoration-color: #ffa900;}
+            .i{font-family: 'Libre Baskerville', serif}
+            .log{font-family: 'IBM Plex Mono', sans-serif}
         </style></head>
 
     <body>
     <div class="all">
-        <div><h1 >cvni81</h1></div>
-
-        <div><div class="container">
-            <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too!
-                Making this website has been really fun, and i hope you like having a gander at it.
-                This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess. Make yourself at home!
-                <br>Also: they/them, pt-br, en, tok, <18yo
-                <br><br><b>discord</b>: @cvni81#4837 - <b>email</b>: cvni81@gmail.com</p>
-        </div></div>
-
-        <div></div>
+    <div style="padding: 0px 20px; background-color: #202020; min-height:100vh">
+    <h1 style="text-shadow:#080808 5px 5px; line-height: 1.25">cvni81's website</h1>
+    <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too!<br>
+    Making this website has been really fun, and i hope you like having a gander at it.<br>
+    This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>Make yourself at home!<br>
+    Also: they/them, pt-br, en, tok, <18yo</p>
+    <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p>
+    </div>
+    <div style="border:solid #f0f0f0 2px"></div>
+    <div style="font-size:x-large; padding-left: 50px; margin: auto 0;">
+        <a href="/website/about">about</a> stuff about me<br>
+        <a href="/website/musicians">musicians</a> good music people<br>
+        <a href="/website/websites">websites</a> cool websites i've collected<br>
+        <br>
+        <a href="/website/words">words</a> stuff i wrote<br>
+        <a href="/website/blender">blender</a> things i've made in blender<br>
+        <span class="i"><a href="/website/doodles" class="i">doodles</a> some drawings i guess</span><br>
+        <span class="misc"><a href="/website/misc" class="misc">misc</a> other things</span><br>
+        <br>
+        <span class="i"><a href="/website/buttons" class="i">buttons</a> links to other websites</span><br>
+        <a href="https://cvni81.123guestbook.com/">guestbook</a> say hi!<br>
+        <span class="log"><a href="/website/sitelog" class="log">sitelog</a> changes to the site</span>
+    </div>
+    <div>
+        hhhhh
+    </div>
     </div>
     </body>
