--- a/indexnew.html
+++ b/indexnew.html
@@ -10,7 +10,7 @@
         <title>cvni81</title>
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
             .all{display: grid;
-            grid-template-columns: 350px 1px auto 350px}
+            grid-template-columns: 350px 1px max-content}
             body{min-height:100vh;
             margin:0px;}
             .misc{color: #f0f0f0;
@@ -21,7 +21,7 @@
             a.log:hover{color: #ffa900;
             text-decoration-color: #ffa900;}
             .i{font-family: 'Libre Baskerville', serif}
-            .log{font-family: 'IBM Plex Mono', sans-serif}
+            .log{font-family: 'IBM Plex Mono', sans-serif; float:right;}
         </style></head>
 
     <body>
@@ -47,10 +47,7 @@
         <br>
         <span class="i"><a href="/website/buttons" class="i">buttons</a> links to other websites</span><br>
         <a href="https://cvni81.123guestbook.com/">guestbook</a> say hi!<br>
-        <span class="log"><a href="/website/sitelog" class="log">sitelog</a> changes to the site</span>
-    </div>
-    <div>
-        hhhhh
+    <div class="log">hhhh</div>
     </div>
     </div>
     </body>
