--- a/indexnew.html
+++ b/indexnew.html
@@ -10,7 +10,7 @@
         <title>cvni81</title>
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
             .all{display: grid;
-            grid-template-columns: 350px 1px max-content}
+            grid-template-columns: 350px 1px auto; width: 100%}
             body{min-height:100vh;
             margin:0px;}
             .misc{color: #f0f0f0;
@@ -47,7 +47,6 @@
         <br>
         <span class="i"><a href="/website/buttons" class="i">buttons</a> links to other websites</span><br>
         <a href="https://cvni81.123guestbook.com/">guestbook</a> say hi!<br>
+    </div></div>
     <div class="log">hhhh</div>
-    </div>
-    </div>
     </body>
