--- a/indexnew.html
+++ b/indexnew.html
@@ -21,7 +21,8 @@
             a.log:hover{color: #ffa900;
             text-decoration-color: #ffa900;}
             .i{font-family: 'Libre Baskerville', serif}
-            .log{font-family: 'IBM Plex Mono', sans-serif; float:right;}
+            .log{font-family: 'IBM Plex Mono', sans-serif; float:right;
+            border: solid #ffa900 2px; background: #543800}
         </style></head>
 
     <body>
@@ -48,5 +49,5 @@
         <span class="i"><a href="/website/buttons" class="i">buttons</a> links to other websites</span><br>
         <a href="https://cvni81.123guestbook.com/">guestbook</a> say hi!<br>
     </div></div>
-    <div class="log">hhhh</div>
+    <div class="log">sitelog!</div>
     </body>
