--- a/indexnew.html
+++ b/indexnew.html
@@ -22,7 +22,8 @@
             text-decoration-color: #ffa900;}
             .i{font-family: 'Libre Baskerville', serif}
             .log{font-family: 'IBM Plex Mono', sans-serif; float:right;
-            border: solid #ffa900 2px; background: #543800}
+            border: solid #ffa900 2px; background: #543800; color: #ffa900; margin: 20px;
+            height: 30%}
         </style></head>
 
     <body>
