--- a/indexnew.html
+++ b/indexnew.html
@@ -23,7 +23,7 @@
             .i{font-family: 'Libre Baskerville', serif}
             .log{font-family: 'IBM Plex Mono', sans-serif; float:right;
             border: solid #ffa900 2px; background: #543800; color: #ffa900; margin: 20px;
-            height: 30%}
+            height: 30%; width: 250px; max-height: 300px}
         </style></head>
 
     <body>
@@ -50,5 +50,5 @@
         <span class="i"><a href="/website/buttons" class="i">buttons</a> links to other websites</span><br>
         <a href="https://cvni81.123guestbook.com/">guestbook</a> say hi!<br>
     </div></div>
-    <div class="log">sitelog!</div>
+    <div class="log"><b>sitelog</b></div>
     </body>
