--- a/indexnew.html
+++ b/indexnew.html
@@ -23,7 +23,7 @@
             .i{font-family: 'Libre Baskerville', serif}
             .log{font-family: 'IBM Plex Mono', sans-serif; float:right;
             border: solid #ffa900 2px; background: #543800; color: #ffa900; margin: 20px;
-            height: 30%; width: 250px; max-height: 300px}
+            height: 30%; width: 250px; max-height: 300px; padding: 10px}
         </style></head>
 
     <body>
@@ -50,5 +50,86 @@
         <span class="i"><a href="/website/buttons" class="i">buttons</a> links to other websites</span><br>
         <a href="https://cvni81.123guestbook.com/">guestbook</a> say hi!<br>
     </div></div>
-    <div class="log"><b>sitelog</b></div>
+    <div class="log"><b style="text-align:center">sitelog</b>
+    <div style="border: solid #a87000 2px; overflow-y: scroll; font-size: medium">
+    
+        <b>6/10/2022 21:40</b>
+        <p>I changed the css of my status.cafe to its own thing! It was supposed to look like a typewriter... kinda. This isn't really a <b>site</b> update, but this is the best place i could put this.</p>
+
+        <b>6/10/2022 16:50</b>
+        <p>Greatly embiggened the <a href="/website/musicians">musicians</a> page, now with bigger and better (hopefully) descriptions! Also i kinda wanna remake this site a bit!</p>
+
+        <b>1/10/2022 16:13</b>
+        <p>New <a href="/website/doodles">doodles</a>! Also, happy october! Also I changed the theme for this log to amber and it looks AWESOME!!!!</p>
+
+        <b>28/9/2022 21:36</b>
+        <p>I changed nimi mute to <a href="/website/words">words</a> now that there are a couple english things there!</p>
+
+        <b>26/9/2022 17:50</b>
+        <p>I wanted to change the layout a tad, and now it's finally done! Yayyyy</p>
+
+        <b>20/9/2022 20:14</b>
+        <p>I have a <a href="https://cvni81.123guestbook.com/">guestbook</a> now! If you've got any feedback to give or any questions, you can say them there.</p>
+
+        <b>17/9/2022 17:10</b>
+        <p>More drawings added to <a href="/website/doodles">doodles</a>, also now put into categories instead of on a list.</p>
+
+        <b>13/9/2022 16:49</b>
+        <p>Added some drawings to <a href="/website/doodles">doodles</a> and added a new <a href="/website/misc">miscellaneous</a> page for things that have no other place that i can put them.</p>
+
+        <b>12/9/2022 16:56</b>
+        <p>I've added <a href="/website/doodles">another new page</a> for me to put drawings, which i make a bunch of. However, it doesn't have much there currently. Hopefully it will in the future.</p>
+
+        <b>12/9/2022 09:20</b>
+        <p>There is now <a href="/website/buttons">a new page</a> dedicated to showcasing buttons other people made that lead to their websites, as well as embedding the curly brackets within the css, so i don't have to add in needlessly long spans.</p>
+
+        <b>11/9/2022 18:15</b>
+        <p>Some "new" blender <a href="/website/blender/cmyk">cmyk</a> things! (Actually i added them a bit ago but removed them)</p>
+
+        <b>11/9/2022 18:46</b>
+        <p>Created the {basement} section of the website and added, for the very first time, a johnvertisement. Now that i have a section of the website that is solely dedicated to hot having a theme (or having a theme that matches rather well with other themes), things like this are fit for it.</p>
+
+        <b>11/9/2022 18:15</b>
+        <p>Just added a new section called <a href="/website/i">{i}</a>. Whenever i feel like making something that doesn't fit the vibe of the rest of the website, i'll put it there, whatever it may be. Also, it has it's own changelog, so anything that changes there will be there, not here. Again, whole different vibe.</p>
+
+        <b>10/9/2022 18:55</b>
+        <p>I made a couple <a href="/website/blender/buttons">buttons</a>. <img src="/website/blender/buttons/walking.gif" alt="walking"></p>
+
+        <b>8/9/2022 19:36</b>
+        <p>I moved the navigation thingy to the top of the page so it doesn't mess up much with the centering!</p>
+
+        <b>7/9/2022 09:33</b>
+        <p>I changed the font in the <a href="/website/words">words</a> section to Atkinson Hyperlegible, because the previous font's legibility sucked. I can even read it without glasses. <i>The power of design.</i></p>
+
+        <b>3/9/2022 17:13</b>
+        <p>I now have a <a href="https://status.cafe/users/cvni81" class="cafe">status.cafe</a> thing after it decided not to give me the confirmation email darnit. I tried to put it at the start but it didn't seem to work and here seemed more appropriate.</p>
+
+        <b>1/9/2022 19:45</b>
+        <p>I might have added a bit too much but it's done now!</p>
+
+        <b>1/9/2022 15:48</b>
+        <p>I just added a little box to help navigating through the site easier. Just a couple more things and i'll be done...</p>
+
+        <b>31/8/2022 22:06</b>
+        <p>Alright, i'm done remaking the site! Not fully, there's still some things i want to do, but it's already better, i think.</p>
+
+        <b>31/8/2022 20:26</b>
+        <p>It's been a while since i've reinstalled Ubuntu, but i'm back and made another <a href="/website/nimi-mute/sona-pini">little poem</a>! Also i feel like changing the layout again...</p>
+
+        <b>18/8/2022 06:29</b>
+        <p>I added a <a href="/website/words/ona">new toki pona poem thing</a>.</p>
+
+        <b>14/8/2022 13:59</b>
+        <p>Ok so, i made all links bold from the css files, but that meant having to remove almost ALL the bold tags from all the pages... That took 50 minutes?? jeez...</p>
+
+        <b>14/8/2022 13:09</b>
+        <p>I added <a href="/website/blender/pyramids" class="pyramid">some more blender things</a> with purple/blue and yellow pyramids.</p>
+
+        <b>12/8/2022 19:12</b>
+        <p>Changed the index layout some. I think it's better.</p>
+
+        <b>12/8/2022 17:42</b>
+        <p>I just added the <a href="/website/blender">blender images</a> and now <a href="/website/sitelog">this log</a> so i can keep better track of what i've added to the site. Also i feel like restructuring the site, the list format isn't working, i think.</p>
+        
+    </div></div>
     </body>
