--- a/indexnew.html
+++ b/indexnew.html
@@ -23,7 +23,7 @@
             .i{font-family: 'Libre Baskerville', serif}
             .log{font-family: 'IBM Plex Mono', sans-serif; float:right;
             border: solid #ffa900 2px; background: #543800; color: #ffa900; margin: 20px;
-            height: 30%; width: 250px; max-height: 300px; padding: 10px}
+            height: 30%; width: 350px; padding: 10px}
         </style></head>
 
     <body>
@@ -51,7 +51,7 @@
         <a href="https://cvni81.123guestbook.com/">guestbook</a> say hi!<br>
     </div></div>
     <div class="log"><b style="text-align:center">sitelog</b>
-    <div style="border: solid #a87000 2px; overflow-y: scroll; font-size: medium">
+    <div style="border: solid #a87000 2px; overflow-y: scroll; font-size: small; max-height: 250px; scrollbar-color: #ffa900 #00000000; padding: 5px">
     
         <b>6/10/2022 21:40</b>
         <p>I changed the css of my status.cafe to its own thing! It was supposed to look like a typewriter... kinda. This isn't really a <b>site</b> update, but this is the best place i could put this.</p>
