--- a/misc/folder/7-10-2022.html
+++ b/misc/folder/7-10-2022.html
@@ -55,7 +55,19 @@
             JUST MAKE IT!<br>
             <br>
             ...<br>
-            I'm sorry i've had to make you scroll through my rambling just to get to the go back link.<br>
+            This felt kinda good to write!<br>
+            A little vent.<br>
+            heh.<br>
+            Outing this out into nothingness feels good.<br>
+            Even if...<br>
+            No one will probably read it.<br>
+            Maybe...<br>
+            Maybe i'll even dedicate another place here to these!<br>
+            Yeah...<br>
+            <br>
+            <i>*sigh*</i><br>
+            <br>
+            Also I'm sorry i've had to make you scroll through my rambling just to get to the go back link.<br>
             But i suppose i wanted you to read this.<br>
             You can go now.<br>
 
