--- a/misc/folder/7-10-2022.html
+++ b/misc/folder/7-10-2022.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <head><link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@500&display=swap" rel="stylesheet"><style>
-        body{background:#000000; color:#ffffff; font-family: 'Noto Sans Mono', monospace; font-size: large;}
+    <head><link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@700&display=swap" rel="stylesheet"><style>
+        body{background:#000000; color:#ffffff; font-family: 'Noto Sans Mono', monospace; font-size: large; line-height: 1.5;}
         a{color:#ffffff}
     </style></head>
     <body>
