--- a/misc/folder/7-10-2022.html
+++ b/misc/folder/7-10-2022.html
@@ -28,6 +28,7 @@
             But i've also come to think that...<br>
             Maybe that's just how it is!<br>
             There isn't one style. That's the style!<br>
+            I can make whatever i want and it'll fit.<br>
             Everything in this place is a bit different, has its own vibe, feelings...<br>
             Also i like how simple it is.<br>
             It's mostly text with some images sometimes.<br>
