--- a/doodles/etc.html
+++ b/doodles/etc.html
@@ -52,5 +52,6 @@
         <img src="/website/doodles/etc/creature.jpg" alt="creature" style="width:100%;">
         <img src="/website/doodles/etc/creature2.jpg" alt="creature2" style="width:100%;">
         <img src="/website/doodles/etc/square.jpg" alt="square" style="width:100%;">
+        <img src="/website/doodles/etc/creature3.png" alt="creature3" style="width:100%;">
         </div>
     </body>
