--- a/doodles/people.html
+++ b/doodles/people.html
@@ -49,5 +49,6 @@
         <img src="/website/doodles/people/stairs.jpg" alt="stairs" style="width:100%;">
         <img src="/website/doodles/people/eh.jpg" alt="eh" style="width:100%;">
         <img src="/website/doodles/people/really.jpg" alt="really" style="width:100%;">
+        <img src="/website/doodles/people/untitled.png" alt="untitled" style="width:100%;">
         </div>
     </body>
