made images smol

--- a/sitelog.html
+++ b/sitelog.html
@@ -32,6 +32,9 @@
         <h1>sitelog</h1>
         <div id="entry" style="margin-bottom: 50px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div>
     <div id="entry">
+        <h2>7/10/2022 23:15</h2>
+        <p>Made the doodle things smaller in resolution so they (hopefully) load faster!</p>    
+    </div><div id="entry">
         <h2>6/10/2022 21:40</h2>
         <p>I changed the css of my status.cafe to its own thing! It was supposed to look like a typewriter... kinda. This isn't really a <b>site</b> update, but this is the best place i could put this.</p>
     </div><div id="entry">
