--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
             .misc{color: #f0f0f0;
             font-family: 'Space Grotesk', sans-serif;}
             a.misc, a.i, a.log{font-style: italic;}
+            a.buttons:hover{color: #7ba0cc}
             a.misc:hover{color: #15c405;
             text-decoration-color: #15c405;}
             a.log:hover{color: #ffa900;
             text-decoration-color: #ffa900;}
-            .i{font-family: 'Libre Baskerville', serif}
+            .i, .buttons{font-family: 'Libre Baskerville', serif}
             .log{font-family: 'IBM Plex Mono', sans-serif}
         </style></head>
 
@@ -45,7 +46,7 @@
         <span class="i"><a href="/website/doodles" class="i">doodles</a> some drawings i guess</span><br>
         <span class="misc"><a href="/website/misc" class="misc">misc</a> other things</span><br>
         <br>
-        <span class="i"><a href="/website/buttons" class="i">buttons</a> links to other websites</span><br>
+        <span class="buttons"><a href="/website/buttons" class="i">buttons</a> links to other websites</span><br>
         <a href="https://cvni81.123guestbook.com/">guestbook</a> say hi!<br>
         <span class="log"><a href="/website/sitelog" class="log">sitelog</a> changes to the site</span>
     </div>
