--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a href="/website/musicians">musicians</a> good music people<br>
         <a href="/website/websites">websites</a> cool websites i've collected<br>
         <br>
-        <a href="/website/words">words</a> stuff i wrote<br>
+        <a href="/website/words">words</a> stuff i have written<br>
         <a href="/website/blender">blender</a> things i've made in blender<br>
         <span class="i"><a href="/website/doodles" class="i">doodles</a> some drawings i guess</span><br>
         <span class="misc"><a href="/website/misc" class="misc">misc</a> other things</span><br>
