--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <span class="i"><a href="/website/doodles" class="i">doodles</a> some drawings i guess</span><br>
         <span class="misc"><a href="/website/misc" class="misc">misc</a> other things</span><br>
         <br>
-        <span class="buttons"><a href="/website/buttons" class="i">buttons</a> links to other websites</span><br>
+        <span class="i"><a href="/website/buttons" class="buttons">buttons</a> links to other websites</span><br>
         <a href="https://cvni81.123guestbook.com/">guestbook</a> say hi!<br>
         <span class="log"><a href="/website/sitelog" class="log">sitelog</a> changes to the site</span>
     </div>
