--- a/words.html
+++ b/words.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>nimi mute</title>
+        <title>words</title>
         <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');
         summary{font-size: x-large}
