--- a/misc/folder/handdrawn.html
+++ b/misc/folder/handdrawn.html
@@ -10,7 +10,8 @@
             background-repeat:no-repeat;
             background-size:cover;
             padding-left: 250px;
-            padding-top:20px;}
+            padding-top:20px;
+            display: block}
         a, a::after, a::before{color: #080808}
     </style>
     </head>
