changed website style

--- a/websites/geo.html
+++ b/websites/geo.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>websites: geography</title>
-        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"></head>
+        <link href="/website/styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"></head>
 
     <body><nav><div style="margin: 20px">
         <a href="/website">home</a><br>
