--- a/sitelog.html
+++ b/sitelog.html
@@ -32,6 +32,9 @@
         <h1>sitelog</h1>
         <div id="entry" style="margin-bottom: 50px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div>
     <div id="entry">
+        <h2>8/10/2022 08:09</h2>
+        <p>Changed the website style to a blue/yellowish theme! Much better than the boring blacks and greys.</p>    
+    <div id="entry">
         <h2>7/10/2022 23:15</h2>
         <p>Made the doodle things smaller in resolution so they (hopefully) load faster!</p>    
     </div><div id="entry">
