added arrow to words

--- a/words.html
+++ b/words.html
@@ -15,7 +15,7 @@
             <a href="/website/musicians">musicians</a><br>
             <a href="/website/websites">websites</a><br>
             <br>
-            <a href="/website/words">words</a>←<br>
+            <a href="/website/words">words</a> ←<br>
             <a href="/website/blender">blender</a><br>
             <a href="/website/doodles">doodles</a><br>
             <a href="/website/misc">misc</a><br>
@@ -27,7 +27,7 @@
         <h1>words</h1>
         <details><summary><a>texts in english</a></summary>
         <ul>
-            <li><a href="/website/words/let-you-out">let you out (73 words)</a></li>
+            <li><a href="/website/words/let-yourself-out">let yourself out (73 words)</a></li>
             <li><a href="/website/words/these-two">these two (62 words)</a></li>
         </ul>
         </details>
