--- a/words/let-yourself-out.html
+++ b/words/let-yourself-out.html
@@ -12,7 +12,7 @@
         <a href="/website/musicians">musicians</a><br>
         <a href="/website/websites">websites</a><br>
         <br>
-        <a href="/website/words">words</a><br>
+        <a href="/website/words">words</a> ←<br>
         <a href="/website/blender">blender</a><br>
         <a href="/website/doodles">doodles</a><br>
         <a href="/website/misc">misc</a><br>
@@ -21,7 +21,7 @@
         <a href="/website/sitelog">sitelog</a><br>
     </div></nav>
     <div class="main">
-        <h1>let you out</h1>
+        <h1>let yourself out</h1>
         <p style="padding: 10px">
         One might feel trapped.
         <br>Within themselves.
@@ -41,7 +41,7 @@
         <br>You can be.
         <br>But it becomes sublime.
         <br>As with all times, it takes time.
-        <br>Let you out.
+        <br>Let yourself out.
         </p>
     </div>
     </body>
