--- a/words/suno.html
+++ b/words/suno.html
@@ -12,7 +12,7 @@
             <a href="/website/musicians">musicians</a><br>
             <a href="/website/websites">websites</a><br>
             <br>
-            <a href="/website/words">words</a><br>
+            <a href="/website/words">words</a> ←<br>
             <a href="/website/blender">blender</a><br>
             <a href="/website/doodles">doodles</a><br>
             <a href="/website/misc">misc</a><br>
