--- a/websites/math.html
+++ b/websites/math.html
@@ -12,7 +12,7 @@
         <br>
         <a href="/website/about">about</a><br>
         <a href="/website/musicians">musicians</a><br>
-        <a href="/website/websites">websites</a><br>
+        <a href="/website/websites">websites</a> ←<br>
         <br>
         <a href="/website/words">words</a><br>
         <a href="/website/blender">blender</a><br>
