--- a/websites.html
+++ b/websites.html
@@ -11,8 +11,8 @@
             <a href="/website">home</a><br>
             <br>
             <a href="/website/about">about</a><br>
-            <a href="/website/musicians">musicians</a> ←<br>
-            <a href="/website/websites">websites</a><br>
+            <a href="/website/musicians">musicians</a><br>
+            <a href="/website/websites">websites</a> ←<br>
             <br>
             <a href="/website/words">words</a><br>
             <a href="/website/blender">blender</a><br>
