--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
             @font-face{font-family: 'Vera Humana 95';
             font-weight: normal;
-            src: url("Vera.ttf")}
+            src: url("/website/styles/Vera.ttf")}
 
             @font-face{font-family: 'Vera Humana 95';
             font-weight: bold;
-            src: url("Verab.ttf")}
+            src: url("/website/styles/Verab.ttf")}
             .all{display: grid;
             grid-template-columns: 350px 1px auto}
             body{min-height:100vh;
