--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             font-family: 'Space Grotesk', sans-serif;}
             .website{color: #f0f0f0;
             font-family: 'Vera Humana 95', sans-serif;}
-            a.misc, a.i, a.log, a.buttons, a.websites{font-style: italic;}
+            a.misc, a.i, a.log, a.buttons{font-style: italic;}
             a.buttons:hover{color: #7ba0cc; text-decoration-color:#7ba0cc}
             a.misc:hover{color: #15c405;
             text-decoration-color: #15c405;}
