--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             margin:0px;}
             .misc{color: #f0f0f0;
             font-family: 'Space Grotesk', sans-serif;}
-            .website{color: #f0f0f0;
+            .websites{color: #f0f0f0;
             font-family: 'Vera Humana 95', sans-serif;}
             a.misc, a.i, a.log, a.buttons{font-style: italic;}
             a.buttons:hover{color: #7ba0cc; text-decoration-color:#7ba0cc}
