added arrow to remaining pages

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <nav><div style="margin: 20px">
             <a href="/website">home</a><br>
             <br>
-            <a href="/website/about">about</a><br>
+            <a href="/website/about">about</a> ←<br>
             <a href="/website/musicians">musicians</a><br>
             <a href="/website/websites">websites</a><br>
             <br>
