--- a/misc/folder/difference.html
+++ b/misc/folder/difference.html
@@ -17,7 +17,7 @@
             <a href="/website/words">words</a><br>
             <a href="/website/blender">blender</a><br>
             <a href="/website/doodles">doodles</a><br>
-            <a href="/website/misc">misc</a><br>
+            <a href="/website/misc">misc</a> ←<br>
             <br>
             <a href="/website/buttons">buttons</a><br>
             <a href="/website/sitelog">sitelog</a><br>
