--- a/buttons.html
+++ b/buttons.html
@@ -25,7 +25,7 @@
         <a href="/website/doodles">doodles</a><br>
         <a href="/website/misc">misc</a><br>
         <br>
-        <a href="/website/buttons">buttons</a><br>
+        <a href="/website/buttons">buttons</a> ←<br>
         <a href="/website/sitelog">sitelog</a><br>
     </div></nav>
     <div class="main">
