--- a/doodles.html
+++ b/doodles.html
@@ -27,7 +27,7 @@
         <br>
         <a href="/website/words">words</a><br>
         <a href="/website/blender">blender</a><br>
-        <a href="/website/doodles">doodles</a><br>
+        <a href="/website/doodles">doodles</a> ←<br>
         <a href="/website/misc">misc</a><br>
         <br>
         <a href="/website/buttons">buttons</a><br>
