--- a/musicians.html
+++ b/musicians.html
@@ -12,7 +12,7 @@
             <a href="/website">home</a><br>
             <br>
             <a href="/website/about">about</a><br>
-            <a href="/website/musicians">musicians</a><br>
+            <a href="/website/musicians">musicians</a> ←<br>
             <a href="/website/websites">websites</a><br>
             <br>
             <a href="/website/words">words</a><br>
