--- a/sitelog.html
+++ b/sitelog.html
@@ -26,7 +26,7 @@
             <a href="/website/misc">misc</a><br>
             <br>
             <a href="/website/buttons">buttons</a><br>
-            <a href="/website/sitelog">sitelog</a><br>
+            <a href="/website/sitelog">sitelog</a> ←<br>
         </div></nav>
         <div class="main">
         <h1>sitelog</h1>
