--- a/musicians.html
+++ b/musicians.html
@@ -8,7 +8,7 @@
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
             #list li{margin: 20px 0}
         </style></head>
-        <body><nav><div style="margin: 20px">
+        <body><nav><div style="margin: 20px; margin-right: 0px">
             <a href="/website">home</a><br>
             <br>
             <a href="/website/about">about</a><br>
