--- a/about.html
+++ b/about.html
@@ -41,5 +41,5 @@
         <li><a href="/website/doodles">Doodling things</a>;</li>
         <li>Seeing new places and taking photos of them.</li></ul>
     <p>Other things i'm (maybe tangentially) interested in include (but aren't limited to) flags, botany, design, typography and languages. A bunch of stuff.<br>
-    Regarding gender and things, i'm... kinda confused. Non-binary i guess. Use they/them just to be sure.</p>
+    Regarding gender and things, i'm... kinda confused. Non-binary i guess. Use they/them just to be sure. And i'm pretty sure i have OCD.</p>
     </div></body>
