--- a/sitelog.html
+++ b/sitelog.html
@@ -34,7 +34,7 @@
     <div id="entry">
         <h2>8/10/2022 08:09</h2>
         <p>Changed the website style to a blue/yellowish theme! Much better than the boring blacks and greys. Also i added an arrow to the sidebar so it's easier to tell what page you're in!</p>    
-    <div id="entry">
+    </div><div id="entry">
         <h2>7/10/2022 23:15</h2>
         <p>Made the doodle things smaller in resolution so they (hopefully) load faster!</p>    
     </div><div id="entry">
