--- a/blender.html
+++ b/blender.html
@@ -36,9 +36,9 @@
             <br>btw, all the images/gifs (just like all of the site) are licensed under <a href="/website/LICENSE.txt">GPLv3</a>.
         </p>
         <ul>
-            <li><a href="/website/blender/pyramids" class="pyramid">pyramids (4)</a></li>
-            <li><a href="/website/blender/buttons">buttons (7)</a></li>
-            <li><a href="/website/blender/cmyk">cmyk (5)</a></li></ul>
+            <li><a href="/website/blender/pyramids" class="pyramid" class="small">pyramids (4)</a></li>
+            <li><a href="/website/blender/buttons" class="small">buttons (7)</a></li>
+            <li><a href="/website/blender/cmyk"class="small">cmyk (5)</a></li></ul>
         <br>
         <img src="/website/blender/ampersand.png" alt="ampersand" width="500px">
         <img src="/website/blender/angle2.png" alt="angle2" width="500px">
