--- a/musicians.html
+++ b/musicians.html
@@ -7,6 +7,8 @@
         <title>musicians</title>
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
             #list li{margin: 20px 0}
+            a.bandcamp, a.spotify{font-weight: normal; text-decoration-thickness: 1px;}
+            a.bandcampbold, a.spotifybold{font-weight: bold; text-decoration-thickness: 2px}
         </style></head>
         <body><nav><div style="margin: 20px; margin-right: 0px">
             <a href="/website">home</a><br>
@@ -26,29 +28,29 @@
         <div class="main"><h1>favorite musicians</h1>
         <p>These are some musicians who i listen/listened to a lot. I recommend checking them out! (<a href="" class="bandcamp">blue links</a> lead to bandcamp and <a href="" class="spotify">green links</a> lead to spotify)</p>
         <ul id="list">
-            <li><a href="https://radiohead.bandcamp.com/" class="bandcamp">
+            <li><a href="https://radiohead.bandcamp.com/" class="bandcampbold">
                 Radiohead</a>: They've been making music since the 90s, mostly rock at first but their stuff is super varied with each album.
-                I recommend <a href="https://radiohead.bandcamp.com/album/ok-computer" class="bandcamp">OK Computer</a> and <a href="https://radiohead.bandcamp.com/album/kid-a" class="bandcamp">Kid A</a>, as well as the <a href="https://www.radiohead.com/library">Radiohead Public Library</a> for everything they've made since their start. Almost.<br></li>
-            <li><a href="https://gingerroot.bandcamp.com/" class="bandcamp">
+                I recommend <a href="https://radiohead.bandcamp.com/album/ok-computer" class="bandcamp">OK Computer</a> and <a href="https://radiohead.bandcamp.com/album/kid-a" class="bandcamp">Kid A</a>, as well as the <a href="https://www.radiohead.com/library" class="small">Radiohead Public Library</a> for everything they've made since their start. Almost.<br></li>
+            <li><a href="https://gingerroot.bandcamp.com/" class="bandcampbold">
                 Ginger Root/Cameron Lew</a>: Again, his music has changed from his early years, from "agressive elevator soul" to city pop. Some great albums are <a href="https://gingerroot.bandcamp.com/album/rikki" class="bandcamp">Rikki</a> and <a href="https://gingerroot.bandcamp.com/album/city-slicker" class="bandcamp">City Slicker</a>.<br></li>
-            <li><a href="https://open.spotify.com/artist/45yEuthJ9yq1rNXAOpBnqM" class="spotify">
+            <li><a href="https://open.spotify.com/artist/45yEuthJ9yq1rNXAOpBnqM" class="spotifybold">
                 Polo & Pan</a>: This duo makes absolute bops of french house; though i haven't listened to them in a while, you absolutely should right now. <a href="https://open.spotify.com/album/0SuFqlCe5i30Fr75ZlPQVT" class="spotify">Caravelle</a> and <a href="https://open.spotify.com/album/7lTn1zyy0duOEeypiqzmcr" class="spotify">Gengis</a> make great listens. Sadly, their stuff isn't in bandcamp.<br></li>
-                <li><a href="https://open.spotify.com/artist/5INjqkS1o8h1imAzPqGZBb" class="spotify">
+                <li><a href="https://open.spotify.com/artist/5INjqkS1o8h1imAzPqGZBb" class="spotifybold">
                 Tame Impala</a>: A psychedelic/indie/rock/pop/synth "band" (it's all just one guy called Kevin Parker, he's AWESOME!!!) His best stuff is <a href="https://open.spotify.com/album/79dL7FLiJFOO0EoehUHQBv" class="spotify">Currents</a> and <a href="https://open.spotify.com/album/31qVWUdRrlb8thMvts0yYL" class="spotify">The Slow Rush</a>. But his stuff isn't in bandcamp either whyyyy<br></li>
-            <li><a href="https://needlejuice.bandcamp.com/album/marvins-marvelous-mechanical-museum" class="bandcamp">
+            <li><a href="https://needlejuice.bandcamp.com/album/marvins-marvelous-mechanical-museum" class="bandcampbold">
                 Tally Hall</a>: Though they're on hiatus since 2011 and only made 2 albums (<a href="https://needlejuice.bandcamp.com/album/marvins-marvelous-mechanical-museum" class="bandcamp">Marvin's Marvelous Mechanical Museum</a> and <a href="https://needlejuice.bandcamp.com/album/good-evil" class="bandcamp">Good & Evil</a>)
                 , they're both absolutely worth listening to, as well as their side project <a href="https://miraclemusical.bandcamp.com/" class="bandcamp">Miracle Musical/ミラクルミュージカル</a>!<br></li>
-            <li><a href="https://zelmastone.bandcamp.com/" class="bandcamp">
+            <li><a href="https://zelmastone.bandcamp.com/" class="bandcampbold">
                 Zelma Stone</a>: The thing that was originally here was "delightful bedroom pop". I can't really find a better descriptor. A good place to start is <a href="https://zelmastone.bandcamp.com/album/dreamland" class="bandcamp">Dreamland</a>.<br></li>
-            <li><a href="https://xahoy.bandcamp.com/" class="bandcamp">
-                Ahoy/Stuart Brown</a>: He makes <a href="https://www.youtube.com/user/XboxAhoy">videogame documentaries</a> on Youtube, as well as all the background music for them! I recommend listening to the bgms to <a href="https://xahoy.bandcamp.com/album/the-first-video-game" class="bandcamp">The First Video Game</a> and <a href="https://xahoy.bandcamp.com/album/big-box-ep" class="bandcamp">Big Boxes</a>.<br></li>
-            <li><a href="https://posy.bandcamp.com/" class="bandcamp">
-                Posy</a>: Like Ahoy, he also makes <a href="https://www.youtube.com/c/PosyMusic">great Youtube videos about everything and nothing</a> and the music that goes alongside them. Good tracks on <a href="https://posy.bandcamp.com/album/way-back-ii" class="bandcamp">Way Back II</a> and <a href="https://posy.bandcamp.com/album/segmented-segments" class="bandcamp">Segmented Segments</a>.<br></li>
-            <li><a href="https://open.spotify.com/artist/3pO5VjZ4wOHCMBXOvbMISG" class="spotify">
+            <li><a href="https://xahoy.bandcamp.com/" class="bandcampbold">
+                Ahoy/Stuart Brown</a>: He makes <a href="https://www.youtube.com/user/XboxAhoy" class="small">videogame documentaries</a> on Youtube, as well as all the background music for them! I recommend listening to the bgms to <a href="https://xahoy.bandcamp.com/album/the-first-video-game" class="bandcamp">The First Video Game</a> and <a href="https://xahoy.bandcamp.com/album/big-box-ep" class="bandcamp">Big Boxes</a>.<br></li>
+            <li><a href="https://posy.bandcamp.com/" class="bandcampbold">
+                Posy</a>: Like Ahoy, he also makes <a href="https://www.youtube.com/c/PosyMusic" class="small">great Youtube videos about everything and nothing</a> and the music that goes alongside them. Good tracks on <a href="https://posy.bandcamp.com/album/way-back-ii" class="bandcamp">Way Back II</a> and <a href="https://posy.bandcamp.com/album/segmented-segments" class="bandcamp">Segmented Segments</a>.<br></li>
+            <li><a href="https://open.spotify.com/artist/3pO5VjZ4wOHCMBXOvbMISG" class="spotifybold">
                 Tom Jobim</a>: A classic bossa nova composer from the 50-60s, and his stuff is listened to the world over. <a href="https://open.spotify.com/album/2dsmGxE74ufKZgSFpEMxel" class="spotify">Stoneflower</a> and <a href="https://open.spotify.com/album/5SSyex1jdJe9h3lbqESv1T" class="spotify">Wave</a> are must-listens.<br></li>
-            <li><a href="https://open.spotify.com/artist/4xJbCqwNfYlbl8v026L24T" class="spotify">
+            <li><a href="https://open.spotify.com/artist/4xJbCqwNfYlbl8v026L24T" class="spotifybold">
                 Alan Hawkshaw</a>: They compose background music for TV and commercials and things (aka library music). Don't know exactly how I came across him but his music is surprisingly good! <a href="https://lukevibert.bandcamp.com/album/nuggets-3-lo103" class="bandcamp">Luke Vibert's Nuggets 3</a> includes a bunch of his songs alonside more bgm goodness.<br></li>
-            <li><a href="https://jackstauber.bandcamp.com/" class="bandcamp">
+            <li><a href="https://jackstauber.bandcamp.com/" class="bandcampbold">
                 Jack Stauber</a>: His music is... weirdly good and simple, i'd say. Can't really put it well into words. <a href="https://jackstauber.bandcamp.com/album/hilo" class="bandcamp">HiLo</a> and <a href="https://jackstauber.bandcamp.com/album/pop-food" class="bandcamp">Pop Food</a> are great places to start!<br></li>
             <li><b>Honorable Mentions</b>: 
                 <a href="https://open.spotify.com/artist/5rX2c1zow6hCph8PnnU3kF" class="spotify">
