--- a/index.html
+++ b/index.html
@@ -48,18 +48,18 @@
     </div>
     <div style="border:solid #f0f0f0 2px"></div>
     <div style="font-size:x-large; padding-left: 50px; margin: auto 0;">
-        <a href="/website/about">about</a> stuff about me<br>
-        <a href="/website/musicians">musicians</a> good music people<br>
-        <span class="websites"><a href="/website/websites" class="websites">websites</a> cool websites i've collected</span><br>
+        <a href="/website/about">about</a> .......... stuff about me<br>
+        <a href="/website/musicians">musicians</a> .......... good music people<br>
+        <a href="/website/websites" class="websites">websites</a> .......... <span class="websites">cool websites i've collected</span><br>
         <br>
-        <a href="/website/words">words</a> stuff i have written<br>
-        <a href="/website/blender">blender</a> things i've made in blender<br>
-        <span class="i"><a href="/website/doodles" class="i">doodles</a> some drawings i guess</span><br>
-        <span class="misc"><a href="/website/misc" class="misc">misc</a> other things</span><br>
+        <a href="/website/words">words</a> .......... stuff i have written<br>
+        <a href="/website/blender">blender</a> .......... things i've made in blender<br>
+        <a href="/website/doodles" class="i">doodles</a> .......... <span class="i">some drawings i guess</span><br>
+        <a href="/website/misc" class="misc">misc</a> .......... <span class="misc">other things</span><br>
         <br>
-        <span class="i"><a href="/website/buttons" class="buttons">buttons</a> links to other websites</span><br>
-        <a href="https://cvni81.123guestbook.com/">guestbook</a> say hi!<br>
-        <span class="log"><a href="/website/sitelog" class="log">sitelog</a> changes to the site</span>
+        <a href="/website/buttons" class="buttons">buttons</a> .......... <span class="i">links to other websites</span><br>
+        <a href="https://cvni81.123guestbook.com/">guestbook</a> .......... say hi!<br>
+        <a href="/website/sitelog" class="log">sitelog</a> .......... <span class="log">changes to the site</span>
     </div>
     </div>
     </body>
