--- a/buttons.html
+++ b/buttons.html
@@ -30,7 +30,7 @@
     </div></nav>
     <div class="main">
     <h1>buttons</h1>
-    <p>This part of the site houses a bunch of buttons (as many as currently possible), from people we talk to on discord and other folks' cool things we've come accross and think you should look at!</p>
+    <p>This part of the site houses a bunch of buttons (as many as currently possible), from people we talk to on discord and other folks' cool things we've come accross and think you should look at! Many of them served as lots of inspiration for me to make my site!</p>
     <h2>acquaintances</h2>
     <a href=https://tabby-the-tabby.neocities.org class="button"><img src=https://tabby-the-tabby.neocities.org/assets/tabbutton.gif alt="tabbutton"></a> 
     <a href="https://motan.gay/" class="button" alt="https://motan.gay/ - behold now!"><img src="https://motan.gay/images/button.png"></a> 
