--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
             text-decoration-color: #15c405;}
             a.log:hover{color: #ffa900;
             text-decoration-color: #ffa900;}
-            a.websites:hover{color: #0f008a;
-            text-decoration-color: #0f008a;}
+            a.websites:hover{color: #F2CF68;
+            text-decoration-color: #F2CF68;}
             .i, .buttons{font-family: 'Libre Baskerville', serif}
             .log{font-family: 'IBM Plex Mono', sans-serif}
+            .small{font-size: large}
         </style></head>
 
     <body>
@@ -48,18 +49,18 @@
     </div>
     <div style="border:solid #f0f0f0 2px"></div>
     <div style="font-size:x-large; padding-left: 50px; margin: auto 0;">
-        <a href="/website/about">about</a> .......... stuff about me<br>
-        <a href="/website/musicians">musicians</a> .......... good music people<br>
-        <a href="/website/websites" class="websites">websites</a> .......... <span class="websites">cool websites i've collected</span><br>
+        <a href="/website/about">about</a> .......... <span class="small">stuff about me</span><br>
+        <a href="/website/musicians">musicians</a> .......... <span class="small">good music people</span><br>
+        <a href="/website/websites" class="websites">websites</a> .......... <span class="small">cool websites i've collected</span><br>
         <br>
-        <a href="/website/words">words</a> .......... stuff i have written<br>
-        <a href="/website/blender">blender</a> .......... things i've made in blender<br>
-        <a href="/website/doodles" class="i">doodles</a> .......... <span class="i">some drawings i guess</span><br>
-        <a href="/website/misc" class="misc">misc</a> .......... <span class="misc">other things</span><br>
+        <a href="/website/words">words</a> .......... <span class="small">poems and other things</span><br>
+        <a href="/website/blender">blender</a> .......... <span class="small">stuff i've made in blender</span><br>
+        <a href="/website/doodles" class="i">doodles</a> .......... <span class="small">stuff i draw</span><br>
+        <a href="/website/misc" class="misc">misc</a> .......... <span class="small">other things</span><br>
         <br>
-        <a href="/website/buttons" class="buttons">buttons</a> .......... <span class="i">links to other websites</span><br>
-        <a href="https://cvni81.123guestbook.com/">guestbook</a> .......... say hi!<br>
-        <a href="/website/sitelog" class="log">sitelog</a> .......... <span class="log">changes to the site</span>
+        <a href="/website/buttons" class="buttons">buttons</a> .......... <span class="small">links to other websites</span><br>
+        <a href="https://cvni81.123guestbook.com/">guestbook</a> .......... <span class="small">say hi!</span><br>
+        <a href="/website/sitelog" class="log">sitelog</a> .......... <span class="small">changes to the site</span>
     </div>
     </div>
     </body>
