--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@700&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@1,400&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,700&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
@@ -25,6 +25,8 @@
             font-family: 'Space Grotesk', sans-serif;}
             .websites{color: #f0f0f0;
             font-family: 'Vera Humana 95', sans-serif;}
+            .words{color: #f0f0f0;
+            font-family: 'Atkinson Hyperlegible', sans-serif}
             a.misc, a.i, a.log, a.buttons{font-style: italic;}
             a.buttons:hover{color: #7ba0cc; text-decoration-color:#7ba0cc}
             a.misc:hover{color: #15c405;
@@ -54,7 +56,7 @@
         <a href="/website/musicians">musicians</a> .......... <span class="small">good music people</span><br>
         <a href="/website/websites" class="websites">websites</a> .......... <span class="small">cool websites i've collected</span><br>
         <br>
-        <a href="/website/words">words</a> .......... <span class="small">poems and other things</span><br>
+        <a href="/website/words" class="words">words</a> .......... <span class="small">poems and other things</span><br>
         <a href="/website/blender">blender</a> .......... <span class="small">stuff i've made in blender</span><br>
         <a href="/website/doodles" class="i">doodles</a> .......... <span class="small">stuff i draw</span><br>
         <a href="/website/misc" class="misc">misc</a> .......... <span class="small">other things</span><br>
