--- a/toki-pona/index.html
+++ b/toki-pona/index.html
@@ -7,6 +7,6 @@
         <link href="/website/toki-pona/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
     <body>
-    <h1>h</h1>
+    <h1>introduction</h1>
     <p>dingus</p>
     </body>
