--- a/toki-pona/index.html
+++ b/toki-pona/index.html
@@ -8,5 +8,17 @@
 
     <body>
     <h1>introduction</h1>
-    <p>dingus</p>
+    <p>
+        Alright, so.
+        <br>
+        <br>Before i can start teaching the actual language i have to talk a bit about it.
+        <br>Unlike a bunch of other languages like English or French or Japanese, which appeared naturally in a community, toki pona is a "constructed language", made by just one person. In this case it's Sonja Lang, a canadian linguist!
+        <br>
+        <br>And toki pona is very notable because it has just 137 words.
+        <br>And you can use them to talk about basically everything in the universe.
+        <br>But how????/??
+        <br>
+        <br>The answer is pretty simple: to let a word mean many things at once that, in another language, may be represented by different words.
+        <br>For example, let's look at the first word in the name of the language:
+    </p>
     </body>
