--- a/toki-pona/index.html
+++ b/toki-pona/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,700;1,300&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>lipu sona</title>
         <link href="/website/toki-pona/style.css" rel="stylesheet" type="text/css" media="all"></head>
@@ -16,9 +16,11 @@
         <br>
         <br>And toki pona is very notable because it has just 137 words.
         <br>And you can use them to talk about basically everything in the universe.
-        <br>But how????/??
+        <br>But how?????
         <br>
         <br>The answer is pretty simple: to let a word mean many things at once that, in another language, may be represented by different words.
         <br>For example, let's look at the first word in the name of the language:
+        <br>
+        <br><blockquote><i>toki.</i></blockquote>
     </p>
     </body>
