--- a/toki-pona/index.html
+++ b/toki-pona/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,700;1,300&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>lipu sona</title>
         <link href="/website/toki-pona/style.css" rel="stylesheet" type="text/css" media="all"></head>
@@ -22,5 +22,10 @@
         <br>For example, let's look at the first word in the name of the language:
         <br>
         <br><blockquote><i>toki.</i></blockquote>
+
+        It can mean many things: speech, communication, talking...
+        But it can also mean language or be used as a greeting:
+
+        <blockquote><i>toki!</i> ≃ hello!</blockquote>
     </p>
     </body>
