--- a/toki-pona/index.html
+++ b/toki-pona/index.html
@@ -21,11 +21,11 @@
         <br>The answer is pretty simple: to let a word mean many things at once that, in another language, may be represented by different words.
         <br>For example, let's look at the first word in the name of the language:
         <br>
-        <br><blockquote><i>toki.</i></blockquote>
-
-        It can mean many things: speech, communication, talking...
-        But it can also mean language or be used as a greeting:
-
-        <blockquote><i>toki!</i> ≃ hello!</blockquote>
+        <br>    <i>toki.</i>
+        <br>
+        <br>It can mean many things: speech, communication, talking...
+        <br>But it can also mean language or be used as a greeting:
+        <br>
+        <br>    <i>toki!</i> ≃ hello!
     </p>
     </body>
