--- a/toki-pona/index.html
+++ b/toki-pona/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,350;0,700;1,350&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>lipu sona</title>
         <link href="/website/toki-pona/style.css" rel="stylesheet" type="text/css" media="all"></head>
@@ -27,5 +27,19 @@
         <br>But it can also mean language or be used as a greeting:
         <br>
         <br>    <i>toki!</i> ≃ hello!
+        <br>You might have also noticed that one word can be of different functions; that is, it can work as a noun (language), verb (talking) or an adjective (verbal/something that has to do with language/speaking)!
+        <br>
+        <br>    <i>mi sona e toki pona</i> ≃ i know toki pona <b>(noun)</b>
+        <br>
+        <br>    <i>mi toki suli</i> ≃ i speak loudly <b>(verb)</b>
+        <br>
+        <br>    <i>mi jo e ilo toki</i> ≃ i have a speech tool/phone <b>(adjective)</b>
+        <br>
+        <br>Now, you may be thinking:
+        <br>"how am i gonna know what a word means if it has so many meanings??"
+        <br>
+        <br>The answer, as with many things, is <b>context</b>.
+        <br>
+        <br>Let's see another example:
     </p>
     </body>
