--- a/toki-pona/index.html
+++ b/toki-pona/index.html
@@ -30,11 +30,11 @@
         <br>
         <br>You might have also noticed that one word can be of different functions; that is, it can work as a noun (language), verb (talking) or an adjective (verbal/something that has to do with language/speaking)!
         <br>
-        <br><i>mi sona e toki pona</i> ≃ i know toki pona <b>(noun)</b>
+        <br><i>mi sona e <u>toki</u> pona</i> ≃ i know <u>toki</u> pona <b>(noun)</b>
         <br>
-        <br><i>mi toki suli</i> ≃ i speak loudly <b>(verb)</b>
+        <br><i>mi <u>toki</u> suli</i> ≃ i <u>speak</u> loudly <b>(verb)</b>
         <br>
-        <br><i>mi jo e ilo toki</i> ≃ i have a speech tool/phone <b>(adjective)</b>
+        <br><i>mi jo e ilo <u>toki</u></i> ≃ i have a <u>speech</u> tool/phone <b>(adjective)</b>
         <br>
         <br>Now, you may be thinking:
         <br>"how am i gonna know what a word means if it has so many meanings??"
