--- a/toki-pona/index.html
+++ b/toki-pona/index.html
@@ -42,5 +42,38 @@
         <br>The answer, as with many things, is <b>context</b>.
         <br>
         <br>Let's see another example:
+        <br><i>suli.</i>
+        <br>
+        <br>suli can mean big, tall, heavy, important.
+        <br>
+        <br>Context will tell whether you're talking about a big book or an important book.
+        <br>
+        <br>The constitution is important but it isn't exactly big. (some can even fit within your pocket!)
+        <br>Euclid's Elements is 13 whole books worth of geometry which, may not be so important to you.
+        <br>But if it is to you, then suli can mean both big and important at the same time.
+        <br>It's suli.
+        <br>
+        <br>So...
+        <br>You can kinda see the toki pona philosophy here.
+        <br>To simplify what you thing and want to say as much as possible.
+        <br>And it also leads you to reflect on things just by translating them into toki pona.
+        <br>What the heck is a keyboard???
+        <br>
+        <br>It's a tool that makes sound.
+        <br><i>ilo kalama</i> ≃ instrument/keyboard
+        <br>
+        <br>What the heck is an apple???
+        <br>
+        <br>It's a red fruit.
+        <br><i>kili loje</i> ≃ apple
+        <br>
+        <br>What the heck is a computer???
+        <br>
+        <br>It's an image tool/information tool/internet tool/entertainment tool/number tool.
+        <br><i>ilo sitelen</i> ≃ computer/phone/television/display
+        <br><i>ilo sona</i> ≃ computer/phone
+        <br><i>ilo musi</i> ≃ computer/television/game console/phone
+        <br><i>ilo linluwi</i> ≃ computer/router/phone
+        <br><i>ilo nanpa</i> ≃ computer/calculator/phone
     </p>
     </body>
