--- a/toki-pona/index.html
+++ b/toki-pona/index.html
@@ -75,5 +75,18 @@
         <br><i>ilo musi</i> ≃ computer/television/game console/phone
         <br><i>ilo linluwi</i> ≃ computer/router/phone
         <br><i>ilo nanpa</i> ≃ computer/calculator/phone
+        <br>Depending on what you find important about something, you describe it differently! toki pona can be very subjective.
+        <br>But most words defnitely aren't this inexact. Computers can just do so, so, SO many things, toki pona can't really describe it in one way.
+        <br>
+        <br>With ALL that out of the way...
+        <br>I'll show you how to speak toki pona bit by bit, starting with the basics of how to say things, and going to little things so you can talk about literally anything with just 137 words.
+        <br>
+        <br>(Actually there are 120 core words (but 17 other ones were added as being important but not everyone knows them (and others yet like linluwi aren't known by most people)))
+        <br>
+        <br>And one more thing i should talk about is people have their own "nasin" (way, method, road, path, doctrine) of toki pona, non-standard things.
+        <br>
+        <br>But i (hope to) show here a way that (hopefully) others will understand.
+        <br>
+        <br><s>if i ever finish it</s>
     </p>
     </body>
