--- a/toki-pona/index.html
+++ b/toki-pona/index.html
@@ -75,6 +75,7 @@
         <br><i>ilo musi</i> ≃ computer/television/game console/phone
         <br><i>ilo linluwi</i> ≃ computer/router/phone
         <br><i>ilo nanpa</i> ≃ computer/calculator/phone
+        <br>
         <br>Depending on what you find important about something, you describe it differently! toki pona can be very subjective.
         <br>But most words defnitely aren't this inexact. Computers can just do so, so, SO many things, toki pona can't really describe it in one way.
         <br>
@@ -83,7 +84,11 @@
         <br>
         <br>(Actually there are 120 core words (but 17 other ones were added as being important but not everyone knows them (and others yet like linluwi aren't known by most people)))
         <br>
-        <br>And one more thing i should talk about is people have their own "nasin" (way, method, road, path, doctrine) of toki pona, non-standard things.
+        <br>Another important thing to mention is that prescriptivism can be pretty bad in toki pona.
+        <br>
+        <br>You might have noticed i used ≃ instead of =, because depending on context (or even the speaker, like the computer example), a toki pona phrase can be translated as many things, and an english phrase or word can be translated as many things.
+        <br>
+        <br>And (yet) another more thing i should talk about is people have their own "nasin" (way, method, road, path, doctrine) of toki pona, non-standard things.
         <br>
         <br>But i (hope to) show here a way that (hopefully) others will understand.
         <br>
