--- a/toki-pona/index.html
+++ b/toki-pona/index.html
@@ -42,13 +42,14 @@
         <br>The answer, as with many things, is <b>context</b>.
         <br>
         <br>Let's see another example:
+        <br>
         <br><i>suli.</i>
         <br>
         <br>suli can mean big, tall, heavy, important.
         <br>
         <br>Context will tell whether you're talking about a big book or an important book.
         <br>
-        <br>The constitution is important but it isn't exactly big. (some can even fit within your pocket!)
+        <br>The constitution is important but it isn't exactly big. (some can even fit in your pocket!)
         <br>Euclid's Elements is 13 whole books worth of geometry which, may not be so important to you.
         <br>But if it is to you, then suli can mean both big and important at the same time.
         <br>It's suli.
