--- a/toki-pona/index.html
+++ b/toki-pona/index.html
@@ -50,7 +50,7 @@
         <br>Context will tell whether you're talking about a big book or an important book.
         <br>
         <br>The constitution is important but it isn't exactly big. (some can even fit in your pocket!)
-        <br>Euclid's Elements is 13 whole books worth of geometry which, may not be so important to you.
+        <br>Euclid's Elements is 13 whole books worth of geometry, which may not be so important to you.
         <br>But if it is to you, then suli can mean both big and important at the same time.
         <br>It's suli.
         <br>
