--- a/toki-pona/index.html
+++ b/toki-pona/index.html
@@ -26,7 +26,7 @@
         <br>It can mean many things: speech, communication, talking...
         <br>But it can also mean language or be used as a greeting:
         <br>
-        <br><i>toki!</i> ≃ hello!<img src="/website/toki-pona/sitelen0/toki.png" alt="toki">
+        <br><img src="/website/toki-pona/sitelen0/toki.png" alt="toki"><i>toki!</i> ≃ hello!
         <br>
         <br>You might have also noticed that one word can be of different functions; that is, it can work as a noun (language), verb (talking) or an adjective (verbal/something that has to do with language/speaking)!
         <br>
