--- a/toki-pona/index.html
+++ b/toki-pona/index.html
@@ -37,7 +37,7 @@
         <br><i>mi jo e ilo <u>toki</u></i> ≃ i have a <u>speech</u> tool/phone <b>(adjective)</b>
         <br>
         <br>Now, you may be thinking:
-        <br>"how am i gonna know what a word means if it has so many meanings??"
+        <br><img src="/website/toki-pona/sitelen0/aaaa.png" alt="aaaa">"how am i gonna know what a word means if it has so many meanings??"
         <br>
         <br>The answer, as with many things, is <b>context</b>.
         <br>
@@ -49,8 +49,8 @@
         <br>
         <br>Context will tell whether you're talking about a big book or an important book.
         <br>
-        <br>The constitution is important but it isn't exactly big. (some can even fit in your pocket!)
-        <br>Euclid's Elements is 13 whole books worth of geometry, which may not be so important to you.
+        <br><img src="/website/toki-pona/sitelen0/pocket.png" alt="pocket">The constitution is important but it isn't exactly big. (some can even fit in your pocket!)
+        <br><img src="/website/toki-pona/sitelen0/dotdotdot.png" alt="dotdotdot">Euclid's Elements is 13 whole books worth of geometry, which may not be so important to you.
         <br>But if it is to you, then suli can mean both big and important at the same time.
         <br>It's suli.
         <br>
@@ -61,19 +61,19 @@
         <br>What the heck is a keyboard???
         <br>
         <br>It's a tool that makes sound.
-        <br><i>ilo kalama</i> ≃ instrument/keyboard
+        <br><img src="/website/toki-pona/sitelen0/keyboard.png" alt="keyboard"><i>ilo kalama</i> ≃ instrument/keyboard
         <br>
         <br>What the heck is an apple???
         <br>
         <br>It's a red fruit.
-        <br><i>kili loje</i> ≃ apple
+        <br><img src="/website/toki-pona/sitelen0/apple.png" alt="apple"><i>kili loje</i> ≃ apple
         <br>
         <br>What the heck is a computer???
         <br>
         <br>It's an image tool/information tool/internet tool/entertainment tool/number tool.
         <br><i>ilo sitelen</i> ≃ computer/phone/television/display
         <br><i>ilo sona</i> ≃ computer/phone
-        <br><i>ilo musi</i> ≃ computer/television/game console/phone
+        <br><img src="/website/toki-pona/sitelen0/computer.png" alt="computer"><i>ilo musi</i> ≃ computer/television/game console/phone
         <br><i>ilo linluwi</i> ≃ computer/router/phone
         <br><i>ilo nanpa</i> ≃ computer/calculator/phone
         <br>
@@ -87,12 +87,12 @@
         <br>
         <br>Another important thing to mention is that prescriptivism can be pretty bad in toki pona.
         <br>
-        <br>You might have noticed i used ≃ instead of =, because depending on context (or even the speaker, like the computer example), a toki pona phrase can be translated as many things, and an english phrase or word can be translated as many things.
+        <br><img src="/website/toki-pona/sitelen0/approx.png" alt="approx">You might have noticed i used ≃ instead of =, because depending on context (or even the speaker, like the computer example), a toki pona phrase can be translated as many things, and an english phrase or word can be translated as many things.
         <br>
         <br>And (yet) another more thing i should talk about is people have their own "nasin" (way, method, road, path, doctrine) of toki pona, non-standard things.
         <br>
         <br>But i (hope to) show here a way that (hopefully) others will understand.
         <br>
-        <br><s>if i ever finish it</s>
+        <br><img src="/website/toki-pona/sitelen0/bye.png" alt="bye"><s>if i ever finish it</s>
     </p>
     </body>
